--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-title: Halve
+title: 周旺生
 description: Stylish, Two-Column Jekyll Theme
 url: https://taylantatli.github.io/Halve
 logo: halve.png                                       # Site logo
